Home, Shop, Article, & About Page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+
     <title>Focus Textile</title>
   </head>
   <body>
